# mcp-backend

./: .env  .gitignore  AI_PREDICTIONS_CHECKLIST.md  AI_PREDICTIONS_IMPLEMENTATION_SUMMARY.md  AI_PREDICTIONS_README.md  API_DOCUMENTATION_COMPLETE.md  API_RESPONSE_DOCUMENTATION.md  API_TESTING_EXAMPLES.md  API_TEST_RESULTS.md  ASK_ME_MORE_COMPLETE_FIX_SUMMARY.md  ASK_ME_MORE_FIXED_COMPLETE.md  ASK_ME_MORE_FRONTEND_GUIDE.md  BACKEND_DEPLOY_CHECKLIST.md  BACKEND_GENERAL_ASSESSMENT_GUIDE.md  BACKEND_SYNC_SUMMARY.md  BACKGROUND_JOBS_IMPLEMENTATION.md  CLAUDE.md  COMPLETE_REPORTS_API_GUIDE.md  COMPLETE_SUPABASE_MIGRATION.sql  DEBUGGING_SLICE_ERROR.md  DEEP_DIVE_FIX.md  DEEP_DIVE_FIXED_SUMMARY.md  DEEP_DIVE_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DUKE_FINAL_FIX.md  Dockerfile  EMAIL_SYSTEM_MIGRATION.sql  ENHANCED_REPORTS_MIGRATION.sql  EXACT_FRONTEND_FLOW.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_IMPLEMENTATION_GUIDE.md  FIXED_ENHANCED_REPORTS_MIGRATION.sql  FIXES_COMPLETED_README.md  FRONTEND_AI_PREDICTIONS_GUIDE.md  FRONTEND_ASK_ME_MORE_GUIDE.md  FRONTEND_BACKEND_FIX_GUIDE.md  FRONTEND_CHAT_REASONING_GUIDE.md  FRONTEND_CORS_FIX.md  FRONTEND_DEEP_DIVE_UPDATE.md  FRONTEND_FINAL_GUIDE.md  (+200 more)
.claude/: settings.local.json
.nixpacks/: install.sh
api/: ai_predictions.py  chat.py  email.py  export.py  follow_up.py  general_assessment.py  health_analysis.py  health_scan.py  health_score.py  health_story.py  photo_analysis.py  photo_analysis.py.backup  photo_analysis_debug.py  photo_analysis_fixed_followup.py  photo_analysis_history_endpoint.py  photo_analysis_optimized.py  (+2 more)
(+131 files in other folders)
